--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
-    /*margin: 0px;
-    padding: 0px;*/
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -11,15 +11,25 @@ footer {
     display: flex;
     justify-content: space-evenly;  
     align-items: center;  
+    margin: 1rem;
+    padding: 1rem;    
 }
 
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin: 1rem;
+    padding: 1rem;
 }
 
 i {
     font-size:1.2rem;
+}
+
+main {
+    margin: 1rem;
+    padding: 1rem;    
 }
 
 .main-index {
