--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ main {
 .main-index {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 nav > a {
@@ -53,6 +54,7 @@ p {
 
 .portada {
     width:49vw;
+    padding: 0 0.5rem;
 }
 
 table {
