--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,16 @@ footer {
     padding: 1rem;    
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 10px;
+}
+
+.grid-container > div > img {
+    width: 100%;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -25,6 +35,10 @@ header {
 
 i {
     font-size:1.2rem;
+}
+
+iframe {
+    width: 100%;
 }
 
 main {
