--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,20 @@ footer {
 }
 
 header {
+    margin: 1rem;
+    padding: 0.5rem;
+    border: 1px solid gray;
+}
+
+/* Se necesita esta clase para todo header no afectado por Bootstrap */
+
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 1rem;
     padding: 1rem;
+    border: 1px solid gray;
 }
 
 i {
