--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,21 @@
 
 footer {
     display: flex;
-    justify-content: space-evenly;  
-    align-items: center;  
+    justify-content: space-around;
+    align-items: center;
     margin: 1rem;
-    padding: 1rem;    
+    padding: 1rem;
+    border: 1px solid gray;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
     grid-gap: 10px;
+}
+
+.grid-container > div {
+    /*border: 1px solid gray;*/
 }
 
 .grid-container > div > img {
@@ -28,6 +33,7 @@ footer {
 header {
     margin: 1rem;
     padding: 0.5rem;
+    border: 1px solid gray;
 }
 
 /* Se necesita esta clase para todo header no afectado por Bootstrap */
@@ -38,6 +44,7 @@ header {
     align-items: center;
     margin: 1rem;
     padding: 1rem;
+    border: 1px solid gray;
 }
 
 i {
@@ -50,7 +57,8 @@ iframe {
 
 main {
     margin: 1rem;
-    padding: 1rem;    
+    padding: 1rem;
+    border: 1px solid gray;
 }
 
 .main-index {
@@ -96,3 +104,20 @@ td:nth-child(3) {
 th {
     font-weight: 700;
 }
+
+
+/* Small devices (phones, 480px and down)
+@media only screen and (max-width: 480px) {
+  .example {background: green;}
+}
+*/
+/* Medium devices (tablets, 768px and up)
+@media only screen and (min-width: 768px) {
+  .example {background: blue;}
+}
+*/
+/* Large devices (laptops/desktops, 1024px and up)
+@media only screen and (min-width:1024px) {
+  .example {background: orange;}
+}
+*/
